<resources>
    <string name="youtube_api_key" translatable="false">AIzaSyATKNzuvv3uOz504VwHEtfU3Y6SAqaOcpk</string>
    <string name="fabric_api_key" translatable="false">e603f0922335662fc79221cfa3d2fe87b4000d32</string>
    <string name="server_client_id" translatable="false">175632774293-mf924v8fuik18qekvthjdjg6dojqghae.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">1773266689662479</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="article_news">News</string>
    <string name="article_events">Events</string>

    <string name="demo_header" translatable="false">Demo Settings</string>

    <string name="app_name">Municipali</string>

    <string name="city_news">City news</string>
    <string name="city_events">City events</string>
    <string name="city_surveys">City surveys</string>
    <string name="article">Article</string>
    <string name="question">Question</string>

    <string name="pull_to_retry">Pull to retry</string>
    <string name="loading_failed_tap_to_retry">Loading Failed. Tap to retry.</string>
    <string name="loading_failed">Loading Failed. Check your internet connection.</string>
    <string name="voting_failed">Voting Failed. Check your internet connection.</string>

    <!-- Alpha -->

    <string name="choose_your_city">Choose your city</string>

    <!-- Registration -->

    <string name="registration_sign_up_with_facebook">Sign up with Facebook</string>
    <string name="registration_sign_up_with_google_plus">Sign up with Google</string>
    <string name="registration_skip">Skip registration</string>
    <string name="registration_or">or</string>

    <string name="registration_fail_facebook">Failed to login to Facebook. Please check your internet connection.</string>
    <string name="registration_fail_google_plus">Failed to login to Google Plus. Please check your internet connection.</string>

    <!-- Buttons -->

    <string name="button_continue">Continue</string>
    <string name="button_vote">Vote</string>
    <string name="button_skip">Skip</string>
    <string name="button_save">Save</string>
    <string name="button_back">Back</string>
    <string name="button_send">Send</string>
    <string name="button_ok">OK</string>

    <!-- Vote -->

    <string name="no_vote_result">Vote results are hidden.</string>
    <string name="answer_percents" translatable="false">%d %%</string>

    <!-- Five marks vote -->

    <string name="at_what_extent_are_you_satisfied">At what extent are you satisfied?</string>

    <string name="five_marks_strongly_disagree_text" translatable="false">1</string>
    <string name="five_marks_disagree_text" translatable="false">2</string>
    <string name="five_marks_neutral_text" translatable="false">3</string>
    <string name="five_marks_agree_text" translatable="false">4</string>
    <string name="five_marks_strongly_agree_text" translatable="false">5</string>

    <string name="five_marks_your_vote">Your</string>
    <string name="five_marks_average_vote">Average</string>

    <!-- Calendar -->

    <string name="short_monday">MO</string>
    <string name="short_tuesday">TU</string>
    <string name="short_wednesday">WE</string>
    <string name="short_thursday">TH</string>
    <string name="short_friday">FR</string>
    <string name="short_saturday">SA</string>
    <string name="short_sunday">SU</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="january_short">JAN</string>
    <string name="february_short">FEB</string>
    <string name="march_short">MAR</string>
    <string name="april_short">APR</string>
    <string name="may_short">MAY</string>
    <string name="june_short">JUN</string>
    <string name="july_short">JUL</string>
    <string name="august_short">AUG</string>
    <string name="september_short">SEP</string>
    <string name="october_short">OCT</string>
    <string name="november_short">NOV</string>
    <string name="december_short">DEC</string>

    <string name="date" translatable="false">%1$s %2$d, %3$d</string>

    <string name="today">Today</string>
    <string name="soon">Soon</string>

    <string name="calendar_date" translatable="false">%1$s, %2$d</string>

    <!-- Events -->

    <string name="no_today_events">No events will happen today</string>
    <string name="no_soon_events">No events will happen soon</string>

    <!-- Settings -->

    <string name="settings">Settings</string>

    <string name="language">Language:</string>

    <string name="lang_hebrew">עברית‎</string>

    <!-- Report -->

    <string name="report_no_permissions">You need all allow the application to access Camera and Read / Write operations on external storage in order to use camera</string>

    <string name="title_report">Make a report</string>

    <string name="report_description">Send us a photo or a description of a problem you encountered in our city. We will react as soon as possible</string>
    <string name="report_terms">By sending a report, you give your agreement to keep and use the content in our needs.</string>

    <string name="report_from_camera">Take a photo</string>
    <string name="report_from_gallery">Choose from gallery</string>
    <string name="report_without_photo">Without photo</string>

    <string name="write_comment">Write a comment</string>

    <string name="report_sent">A report has been sent.</string>

    <!-- Menu -->
    
    <string name="menu_news">News</string>
    <string name="menu_events">Events</string>
    <string name="menu_surveys">Surveys</string>
    <string name="menu_report">Report</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="menu_change_city">Change city</string>

    <!-- Common -->

    <string name="img_description" translatable="false">ImgContent</string>
    <string name="question_mark" translatable="false">\?</string>

    <!-- Article -->

    <string name="article_type_news">NEWS</string>
    <string name="article_type_event">EVENT</string>
    <string name="article_type_survey">SURVEY</string>

    <string name="youtube_video_error">Please install YouTube app to watch video</string>
</resources>
