<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/previous_month"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="0dp"
            android:paddingStart="0dp"
            android:paddingRight="40dp"
            android:paddingEnd="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/calendar_arrow_left"
            android:contentDescription="@string/img_description"/>

        <TextView
            android:id="@+id/month_and_year"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:textColor="@color/primary_black"/>

        <ImageView
            android:id="@+id/next_month"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="40dp"
            android:paddingStart="40dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:layout_centerVertical="true"
            android:src="@drawable/calendar_arrow_right"
            android:contentDescription="@string/img_description"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_gray"
            android:text="@string/short_sunday"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_gray"
            android:text="@string/short_monday"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_gray"
            android:text="@string/short_tuesday"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_gray"
            android:text="@string/short_wednesday"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_gray"
            android:text="@string/short_thursday"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_gray"
            android:text="@string/short_friday"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="@color/primary_gray"
            android:text="@string/short_saturday"
            android:textSize="14sp"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/calendar_pager"
        android:layout_width="match_parent"
        android:layout_height="170dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="2">

        <acropollis.municipalibootstrap.views.MunicipaliButtonView_
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            app:type="primary"
            app:text="Apply"/>

        <acropollis.municipalibootstrap.views.MunicipaliButtonView_
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            app:type="secondary"
            app:text="Clear"/>

    </LinearLayout>


</LinearLayout>